--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,4 +11,5 @@ phases:
 
 artifacts:
   files:
-    - '**/*'
+    commands:
+    - cp s3://webs-artifact/cicd-pipeline/BuildArtif/* s3://webs-Destination/*` 
